2008-08-06  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* doc/hildon.types
	* src/Makefile.am
	* src/hildon-toggle-button.c
	* src/hildon-toggle-button.h
	* src/hildon.h: Removed HildonToggleButton widget, a derived
	class is not necessary for this.

2008-08-06  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_realize),
	(hildon_pannable_area_size_allocate): Code refactoring, add tests
	for negative sizes.

2008-08-05  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.c: (hildon_picker_dialog_init): Make the
	"done" button the default widget for the dialog.

2008-08-04  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c:
	(hildon_touch_selector_class_init),
	(hildon_touch_selector_get_property),
	(_hildon_touch_selector_set_model),
	(_hildon_touch_selector_has_multiple_selection),
	(hildon_touch_selector_has_multiple_selection):
	Add a "has-multiple-selection" property with a virtual
	has_multiple_selection() method to allow derived classes to
	override the default value for it. See the method and property
	documentation for details.

	* src/hildon-touch-selector.h: Add the new API.

	* src/hildon-picker-dialog.c: (requires_done_button): Call
	hildon_touch_selector_has_multiple_selection() instead of
	determining the need for a button itself.

2008-08-04  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (hildon_touch_selector_class_init),
	(_hildon_touch_selector_set_model),
	(hildon_touch_selector_set_model): Move working code to
	_hildon_touch_selector_set_mode(). Call the class method instead.

	* src/hildon-touch-selector.h: Add (*set_model) to
	HildonTouchSelectorClass.

	Make hildon_touch_selector_set_model() a virtual method, so that
	derived classes can extend it and do fancy stuff with the model.

2008-08-04  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: Set back the tarname in AC_INIT to hildon.
