@@ -1,3 +1,9 @@
+2008-08-06  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* src/hildon-touch-selector.c:
+	(hildon_touch_selector_set_active_iter): Set also the cursor in
+	the active row.
+
 2008-08-06  Alberto Garcia  <agarcia@igalia.com>
 
 	* doc/hildon-docs.sgml
